--- a/core/src/main/resources/templates/topic.html
+++ b/core/src/main/resources/templates/topic.html
@@ -80,9 +80,8 @@
           <td>
             <a href="/topic/123">{{ item.title }}</a>
           </td>
-          <td>
-            <i class="icon checkmark"></i> 进行中</td>
-          <td>shawn</td>
+          <td><i class="icon checkmark"></i> 进行中</td>
+          <td>{{item.creator}}</td>
         </tr>
         <!-- <tr>
           <td> 1001 </td>
@@ -93,33 +92,7 @@
             <i class="icon checkmark"></i> 进行中</td>
           <td>shawn</td>
         </tr>
-        <tr>
-          <td> 1001 </td>
-          <td>
-            <a href="problem.html">17软工信管《高级语言程序设计》实验10-文件</a>
-          </td>
-          <td>
-            <i class="icon checkmark"></i> 进行中</td>
-          <td>shawn</td>
-        </tr>
-        <tr>
-          <td> 1001 </td>
-          <td>
-            <a href="problem.html">17软工信管《高级语言程序设计》实验10-文件</a>
-          </td>
-          <td>
-            <i class="icon checkmark"></i> 进行中</td>
-          <td>shawn</td>
-        </tr>
-        <tr>
-          <td> 1001 </td>
-          <td>
-            <a href="problem.html">17软工信管《高级语言程序设计》实验10-文件</a>
-          </td>
-          <td>
-            <i class="icon checkmark"></i> 进行中</td>
-          <td>shawn</td>
-        </tr>
+       
         <tr>
           <td> 1001 </td>
           <td>
@@ -129,69 +102,7 @@
             <i class="icon close"></i>已关闭</td>
           <td>shawn</td>
         </tr>
-        <tr>
-          <td> 1001 </td>
-          <td>
-            <a href="problem.html">17软工信管《高级语言程序设计》实验10-文件</a>
-          </td>
-          <td title="结束于 xxxxxx">
-            <i class="icon close"></i>已关闭</td>
-          <td>shawn</td>
-        </tr>
-        <tr>
-          <td> 1001 </td>
-          <td>
-            <a href="problem.html">17软工信管《高级语言程序设计》实验10-文件</a>
-          </td>
-          <td title="结束于 xxxxxx">
-            <i class="icon close"></i>已关闭</td>
-          <td>shawn</td>
-        </tr>
-        <tr>
-          <td> 1001 </td>
-          <td>
-            <a href="problem.html">17软工信管《高级语言程序设计》实验10-文件</a>
-          </td>
-          <td title="结束于 xxxxxx">
-            <i class="icon close"></i>已关闭</td>
-          <td>shawn</td>
-        </tr>
-        <tr>
-          <td> 1001 </td>
-          <td>
-            <a href="problem.html">17软工信管《高级语言程序设计》实验10-文件</a>
-          </td>
-          <td title="结束于 xxxxxx">
-            <i class="icon close"></i>已关闭</td>
-          <td>shawn</td>
-        </tr>
-        <tr>
-          <td> 1001 </td>
-          <td>
-            <a href="problem.html">17软工信管《高级语言程序设计》实验10-文件</a>
-          </td>
-          <td title="结束于 xxxxxx">
-            <i class="icon close"></i>已关闭</td>
-          <td>shawn</td>
-        </tr>
-        <tr>
-          <td> 1001 </td>
-          <td>
-            <a href="problem.html">17软工信管《高级语言程序设计》实验10-文件</a>
-          </td>
-          <td title="结束于 xxxxxx">
-            <i class="icon close"></i>已关闭</td>
-          <td>shawn</td>
-        </tr>
-        <tr>
-          <td> 1001 </td>
-          <td>
-            <a href="problem.html">17软工信管《高级语言程序设计》实验10-文件</a>
-          </td>
-          <td title="结束于 xxxxxx">
-            <i class="icon close"></i>已关闭</td>
-          <td>shawn</td>
-        </tr>
+    
         <tr>
           <td> 1001 </td>
           <td>
