--- a/core/src/main/resources/templates/problem.html
+++ b/core/src/main/resources/templates/problem.html
@@ -104,7 +104,7 @@
     var ld = {
       list: []
     };
-    var pathId = '${pathId}';
+    var pathId = "${pathId}";
     axios.get('/t/'+pathId)
     .then(function (response) {
       console.log(response.data);
