修改访问控制方式；修改接口格式；TokenKey改用prop设置

--- a/core/src/main/resources/templates/problem.html
+++ b/core/src/main/resources/templates/problem.html
@@ -105,7 +105,7 @@
       list: []
     };
     var pathId = "${pathId}";
-    axios.get('/t/'+pathId)
+    axios.get('/api/t/'+pathId)
     .then(function (response) {
       console.log(response.data);
       ld.list = response.data.data;
