修改页面数据加载

--- a/core/src/main/resources/templates/problem_detail.html
+++ b/core/src/main/resources/templates/problem_detail.html
@@ -18,7 +18,7 @@
 
 
   <div class="ui main container">
-    <h1 class="ui header">Semantic UI Fixed Template</h1>
+    <h1 class="ui header">UI</h1>
 
     <div class="ui breadcrumb">
       <i class="angle right icon"></i>
