--- a/core/src/main/resources/templates/rank.html
+++ b/core/src/main/resources/templates/rank.html
@@ -15,7 +15,7 @@
  <div th:include="template :: header"></div>
 
   <div class="ui main container">
-    <h1 class="ui header">Semantic UI Fixed Template</h1>
+    <h1 class="ui header">UI</h1>
 
     <h1 class="ui header">排名</h1>
 
