--- a/core/src/main/resources/templates/submit_detail.html
+++ b/core/src/main/resources/templates/submit_detail.html
@@ -16,7 +16,7 @@
 
 
   <div class="ui main container">
-    <h1 class="ui header">Semantic UI Fixed Template</h1>
+    <h1 class="ui header">UI</h1>
 
     <h1 class="ui header">提交细节（源代码）</h1>
 
