--- a/core/src/main/resources/templates/problem.html
+++ b/core/src/main/resources/templates/problem.html
@@ -2,124 +2,117 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Problems</title>
   <link rel="stylesheet" type="text/css" href="/lib/semantic-ui/semantic.min.css" />
   <script src="/lib/jquery-3.2.1.min.js"></script>
   <script src="/lib/semantic-ui/semantic.min.js"></script>
   <script src="/lib/vue.js"></script>
   <script src="/lib/axios.min.js"></script>
+  <script src="/js/util.js"></script>
 </head>
 
 <body>
-
-<div th:include="template :: header"></div>
-
-
-  <div class="ui main container">
-    <h1 class="ui header">Semantic UI Fixed Template</h1>
-
-    <h1 class="ui header">所有题目</h1>
-
-    <div class="ui fluid icon input">
-      <input type="text" placeholder="搜索题目"/>
-      <i class="search icon"></i>
-    </div>
+  <div th:include="template :: header"></div>
 
 
+  <div id="app" class="ui main container">
+    <h1 class="ui header">Semantic UI Fixed Template</h1><br/>
 
-    <table class="ui celled striped table">
-      <thead>
-        <tr>
-          <th class="two wide">题目编号</th>
-          <th class="twelve wide">标题</th>
-          <th class="one wide">正确</th>
-          <th class="one wide">提交</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td> 1001 </td>
-          <td>
-            <a href="/problem/2001"> Hero In Maze</a>
-          </td>
-          <td>32</td>
-          <td>132</td>
-        </tr>
-        <tr>
-          <td> 1001 </td>
-          <td> Hero In Maze</td>
-          <td>32</td>
-          <td>132</td>
-        </tr>
-        <tr>
-          <td> 1001 </td>
-          <td> Hero In Maze</td>
-          <td>32</td>
-          <td>132</td>
-        </tr>
-        <tr>
-          <td> 1001 </td>
-          <td> Hero In Maze</td>
-          <td>32</td>
-          <td>132</td>
-        </tr>
-        <tr>
-          <td> 1001 </td>
-          <td> Hero In Maze</td>
-          <td>32</td>
-          <td>132</td>
-        </tr>
-        <tr>
-          <td> 1001 </td>
-          <td> Hero In Maze</td>
-          <td>32</td>
-          <td>132</td>
-        </tr>
+    <div th:include="template :: viewloader"></div>
+    <div th:include="template :: view404"></div>
 
-      </tbody>
-    </table>
+    <div id="viewdata" style="display:none;">
+      <h1 class="ui header">{{ title }}</h1>
 
-    <div class="ui pagination menu">
-      <a class="icon item">
-        <i class="left chevron icon"></i>
-      </a>
-      <a class="item">1</a>
-      <a class="item">2</a>
-      <a class="item">3</a>
-      <a class="item">4</a>
-      <a class="icon item">
-        <i class="right chevron icon"></i>
-      </a>
+      <div class="ui fluid icon input">
+        <input type="text" placeholder="搜索题目" />
+        <i class="search icon"></i>
+      </div>
+
+
+
+      <table class="ui celled striped table">
+        <thead>
+          <tr>
+            <th class="two wide">题目编号</th>
+            <th class="twelve wide">标题</th>
+            <th class="one wide">正确</th>
+            <th class="one wide">提交</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr v-for="item in list">
+            <td> {{ item.id }} </td>
+            <td>
+              <a :href="'/problem/'+item.id"> {{ item.title }}</a>
+            </td>
+            <td>{{ item.acceptNum }}</td>
+            <td>{{ item.submitNum }}</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <div class="ui pagination menu">
+        <a class="icon item">
+          <i class="left chevron icon"></i>
+        </a>
+        <a class="item">1</a>
+        <a class="item">2</a>
+        <a class="item">3</a>
+        <a class="item">4</a>
+        <a class="icon item">
+          <i class="right chevron icon"></i>
+        </a>
+      </div>
     </div>
 
   </div>
 
-<div th:include="template :: footer"></div>
+  <div th:include="template :: footer"></div>
 
-<script>
-  (function () {
-    var ld = {
-      list: []
-    };
-    var pathId = "${pathId}";
-    axios.get('/api/t/'+pathId)
-    .then(function (response) {
-      console.log(response.data);
-      ld.list = response.data.data;
-    })
-    .catch(function (error) {
-      console.log(error);
-    });
-    var vm = new Vue({
-      el:'#elist',
-      data: ld
-    })
-  })();
-  
-</script>
+
+  <script>
+    (function () {
+      var ld = {
+        id: 0,
+        title: '',
+        list: []
+      };
+      var pathId = getPathId();
+      var listDataApi = '/api/t/' + pathId;
+      if (pathId == null) {
+        listDataApi = '/api/p';
+      }
+      axios.get(listDataApi)
+        .then(function (response) {
+          //TODO 系統異常處理
+          data = response.data.data;
+          ld.list = data.problemListItemVos;
+          ld.id = data.id;
+          ld.title = data.title;
+          $("#viewloader").hide();
+          $("#viewdata").show();
+        })
+        .catch(function (error) {
+          if (error.response.status === 404) {
+            $("#viewloader").hide();
+            $("#view404").show();
+          } else {
+            console.log(error.response.status);
+            window.location.href = "/login";
+          }
+
+        });
+      var vm = new Vue({
+        el: '#app',
+        data: ld
+      })
+    })();
+
+  </script>
 
 </body>
 
