--- a/core/src/main/resources/templates/template.html
+++ b/core/src/main/resources/templates/template.html
@@ -1,66 +1,88 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-</head>
-<body>
-<div th:fragment="header">
-    <div class="ui fixed inverted menu">
-        <div class="ui container">
-            <a href="/" class="header item">
-                <!-- <img class="logo" src="logo.png"> -->
-                HSHE Project
-            </a>
 
-            <a href="/topic" class="item">作业</a>
-            <a href="/problem" class="item">题目</a>
-            <a href="/rank" class="item">排名</a>
-            <a href="/submission" class="item">提交</a>
-            <div class="ui simple dropdown item">
-                帮助
-                <i class="dropdown icon"></i>
-                <div class="menu">
-                    <a class="item" href="#">Link Item</a>
-                    <a class="item" href="#">Link Item</a>
-                    <div class="divider"></div>
-                    <div class="header">Header Item</div>
-                    <div class="item">
-                        <i class="dropdown icon"></i>
-                        Sub Menu
-                        <div class="menu">
-                            <a class="item" href="#">Link Item</a>
-                            <a class="item" href="#">Link Item</a>
+<head>
+    <meta charset="UTF-8" />
+</head>
+
+<body>
+    <div th:fragment="header">
+        <div class="ui fixed inverted menu">
+            <div class="ui container">
+                <a href="/" class="header item">
+                    <!-- <img class="logo" src="logo.png"> -->
+                    HSHE Project
+                </a>
+
+                <a href="/topic" class="item">作业</a>
+                <a href="/problem" class="item">题目</a>
+                <a href="/rank" class="item">排名</a>
+                <a href="/submission" class="item">提交</a>
+                <div class="ui simple dropdown item">
+                    帮助
+                    <i class="dropdown icon"></i>
+                    <div class="menu">
+                        <a class="item" href="#">Link Item</a>
+                        <a class="item" href="#">Link Item</a>
+                        <div class="divider"></div>
+                        <div class="header">Header Item</div>
+                        <div class="item">
+                            <i class="dropdown icon"></i>
+                            Sub Menu
+                            <div class="menu">
+                                <a class="item" href="#">Link Item</a>
+                                <a class="item" href="#">Link Item</a>
+                            </div>
                         </div>
+                        <a class="item" href="#">Link Item</a>
                     </div>
-                    <a class="item" href="#">Link Item</a>
+
+
+
                 </div>
 
-
-
-            </div>
-
-            <a href="#" class="item right">
-                <i class="user icon"></i>140705202</a>
-            <a href="#" class="item ">退出</a>
-        </div>
-    </div>
-</div>
-
-
-<div th:fragment="footer">
-    <div class="ui  vertical footer segment">
-        <div class="ui center aligned container">
-
-            <div class="ui  section divider"></div>
-            <img src="/logo.png" class="ui centered mini image"/>
-            <div class="ui horizontal  small divided link list">
-                <a class="item" href="#">Site Map</a>
-                <a class="item" href="#">Contact Us</a>
-                <a class="item" href="#">Terms and Conditions</a>
-                <a class="item" href="#">Copyright © 2018 HSHE</a>
+                <a href="#" class="item right">
+                    <i class="user icon"></i>140705202</a>
+                <a href="#" class="item ">退出</a>
             </div>
         </div>
     </div>
-</div>
+
+
+    <div th:fragment="footer">
+        <div class="ui  vertical footer segment">
+            <div class="ui center aligned container">
+
+                <div class="ui  section divider"></div>
+                <img src="/img/logo.png" class="ui centered mini image" />
+                <div class="ui horizontal  small divided link list">
+                    <a class="item" href="#">Site Map</a>
+                    <a class="item" href="#">Contact Us</a>
+                    <a class="item" href="#">Terms and Conditions</a>
+                    <a class="item" href="#">Copyright © 2018 HSHE</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div th:fragment="viewloader">
+        <div id="viewloader" class="ui active centered inline loader"></div>
+    </div>
+
+    <div th:fragment="view404">
+        <div id="view404" style="display:none;" class="ui two column grid">
+            <div class="column">
+                <img style="float:right;" src="/img/404_face.png" width="250px" alt="404 not found" />
+            </div>
+            <div class="column">
+                <h2>
+                    <strong>Page Not Found!</strong>
+                </h2>
+                <p>Sorry, but we can't find the page you are looking for...</p>
+                <br/>
+                <button class="ui primary basic button" onclick="window.location.href='/'">回到首页</button>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
