--- a/core/src/main/resources/templates/topic.html
+++ b/core/src/main/resources/templates/topic.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Topic</title>
   <link rel="stylesheet" type="text/css" href="/lib/semantic-ui/semantic.min.css" />
   <script src="/lib/jquery-3.2.1.min.js"></script>
@@ -15,11 +15,11 @@
 
 <body>
 
-<div th:include="template :: header"></div>
+  <div th:include="template :: header"></div>
 
-  <div class="ui main container">
-    <h1 class="ui header">Semantic UI Fixed Template</h1>
-    <h1 class="ui header"> 目录</h1>
+  <div id="app" class="ui main container">
+    <h1 class="ui header">UI</h1>
+    <h1 class="ui header">目录</h1>
     <div class="ui cards">
       <div class="card">
         <div class="content">
@@ -48,88 +48,56 @@
           </div>
         </div>
       </div>
-
-
     </div>
-
 
 
     <h1 class="ui header">所有作业</h1>
 
     <div class="ui fluid action input">
-        <input type="text" placeholder="Search..."/>
-        <div class="ui primary button">搜索</div>
-      </div>
-
-
-
-
-
-    <table class="ui  striped table">
-      <thead>
-        <tr>
-          <th class="two wide">作业编号</th>
-          <th class="ten wide">标题</th>
-          <th class="two wide">状态</th>
-          <th class="two wide">创建者</th>
-        </tr>
-      </thead>
-      <tbody id="elist">
-        <tr v-for="item in list">
-          <td> {{ item.id }} </td>
-          <td>
-            <a href="/topic/123">{{ item.title }}</a>
-          </td>
-          <td v-if="item.topicStatus=1"><i class="icon checkmark"></i> 进行中</td>
-          <td v-if="item.topicStatus=0"><i class="icon close"></i> 已关闭</td>
-          <td>{{item.creator}}</td>
-        </tr>
-        <!-- <tr>
-          <td> 1001 </td>
-          <td>
-            <a href="problem.html">17软工信管《高级语言程序设计》实验10-文件</a>
-          </td>
-          <td>
-            <i class="icon checkmark"></i> 进行中</td>
-          <td>shawn</td>
-        </tr>
-       
-        <tr>
-          <td> 1001 </td>
-          <td>
-            <a href="problem.html">17软工信管《高级语言程序设计》实验10-文件</a>
-          </td>
-          <td title="结束于 xxxxxx">
-            <i class="icon close"></i>已关闭</td>
-          <td>shawn</td>
-        </tr>
-    
-        <tr>
-          <td> 1001 </td>
-          <td>
-            <a href="problem.html">17软工信管《高级语言程序设计》实验10-文件</a>
-          </td>
-          <td title="结束于 xxxxxx">
-            <i class="icon close"></i>已关闭</td>
-          <td>shawn</td>
-        </tr> -->
-
-      </tbody>
-    </table>
-
-    <div class="ui  pagination menu">
-      <a class="icon item">
-        <i class="left chevron icon"></i>
-      </a>
-      <a class="item">1</a>
-      <a class="item">2</a>
-      <a class="item">3</a>
-      <a class="item">4</a>
-      <a class="icon item">
-        <i class="right chevron icon"></i>
-      </a>
+      <input type="text" placeholder="Search..." />
+      <div class="ui primary button">搜索</div>
     </div>
 
+    <div th:include="template :: viewloader"></div>
+    <br/>
+    <div id="viewdata" style="display:none;">
+      <table class="ui  striped table">
+        <thead>
+          <tr>
+            <th class="two wide">作业编号</th>
+            <th class="ten wide">标题</th>
+            <th class="two wide">状态</th>
+            <th class="two wide">创建者</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr v-for="item in list">
+            <td> {{ item.id }} </td>
+            <td>
+              <a :href="'/topic/'+item.id">{{ item.title }}</a>
+            </td>
+            <td v-if="item.topicStatus=1">
+              <i class="icon checkmark"></i> 进行中</td>
+            <td v-if="item.topicStatus=0">
+              <i class="icon close"></i> 已关闭</td>
+            <td>{{item.creator}}</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <div class="ui  pagination menu">
+        <a class="icon item">
+          <i class="left chevron icon"></i>
+        </a>
+        <a class="item">1</a>
+        <a class="item">2</a>
+        <a class="item">3</a>
+        <a class="item">4</a>
+        <a class="icon item">
+          <i class="right chevron icon"></i>
+        </a>
+      </div>
+    </div>
   </div>
 
   <div th:include="template :: footer"></div>
@@ -145,37 +113,38 @@
     <div class="actions">
       <div class="ui green ok inverted button" onclick="javascript:window.location.href='/login'">
         <i class="checkmark icon"></i>
-          前往登录
+        前往登录
       </div>
     </div>
   </div>
 
-<script>
-  (function () {
-    var ld = {
-      list: []
-    };
-    axios.get('/api/t')
-    .then(function (response) {
-      console.log(response.data);
-      ld.list = response.data.data;
-    })
-    .catch(function (error) {
-      console.log(error);
-      $('.ui.basic.modal').modal('show');
-      $('#modalmsg').text(error.response.data.msg)
-      $(":root").delay(3000).queue(function(){
-        $('.ui.basic.modal').modal('hide');
-        window.location.href="/login";
-      });
-    });
-    var vm = new Vue({
-      el:'#elist',
-      data: ld
-    })
-  })();
-  
-</script>
+  <script>
+    (function () {
+      var ld = {
+        list: []
+      };
+      axios.get('/api/t')
+        .then(function (response) {
+          ld.list = response.data.data;
+          $("#viewloader").hide();
+          $("#viewdata").show();
+        })
+        .catch(function (error) {
+          console.log(error);
+          $('.ui.basic.modal').modal('show');
+          $('#modalmsg').text(error.response.data.msg)
+          $(":root").delay(3000).queue(function () {
+            $('.ui.basic.modal').modal('hide');
+            window.location.href = "/login";
+          });
+        });
+      var vm = new Vue({
+        el: '#app',
+        data: ld
+      })
+    })();
+
+  </script>
 
 </body>
 
