--- a/core/src/main/resources/templates/submit_detail.html
+++ b/core/src/main/resources/templates/submit_detail.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/lib/semantic-ui/semantic.min.css" />
   <script src="/lib/jquery-3.2.1.min.js"></script>
   <script src="/lib/semantic-ui/semantic.min.js"></script>
+  <script src="/js/util.js"></script>
 </head>
 
 <body>
