加入查重模块；修改后台页面

--- a/core/src/main/resources/templates/template.html
+++ b/core/src/main/resources/templates/template.html
@@ -43,7 +43,7 @@
                     <span v-if="resultmap.user_nick!=null">{{resultmap.user_nick}}</span>
                 </a>
                 <a class="item" v-on:click="logout" > 退出 </a>
-                <button class="tiny ui inverted blue basic button" v-if="resultmap.user_role==1" v-on:click="goMaster"  style="margin: 4px" > 作业管理 </button>
+                <button class="tiny ui inverted blue basic button" v-if="resultmap.user_role==1" v-on:click="goMaster"  style="margin: 4px" > 管理后台 </button>
             </div>
         </div>
         <script>
